# LifeXP

./: CMakeLists.txt
core/: CMakeLists.txt
core/include/lifexp/: Goal.h  Player.h  Skill.h  Task.h
core/src/: Player.cpp  Skill.cpp  main.cpp
frontend/: CMakeLists.txt
frontend/src/: main.cpp
src/: main.cpp
tests/: CMakeLists.txt
tests/core/: test_Player.cpp  test_goal.cpp  test_skill.cpp  test_task.cpp
